--- a/photo1.html
+++ b/photo1.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 1</h1>
-        <img class="full-image" src="photo1.jpg" alt="Photo 1">
+        <picture>
+            <source srcset="photo1.webp" type="image/webp">
+            <source srcset="photo1.jpg" type="image/jpeg">
+            <img class="full-image" src="photo1.jpg" alt="Photo 1">
+        </picture>
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/5.6</div>
