--- a/photo14.html
+++ b/photo14.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 14</h1>
-        <img class="full-image" src="photo14.jpg" alt="Photo 14">
+        <picture>
+            <source srcset="photo14.webp" type="image/webp">
+            <source srcset="photo14.jpg" type="image/jpeg">
+            <img class="full-image" src="photo14.jpg" alt="Photo 14">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/6.2</div>
