--- a/photo19.html
+++ b/photo19.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 19</h1>
-        <img class="full-image" src="photo19.jpg" alt="Photo 19">
+        <picture>
+            <source srcset="photo19.webp" type="image/webp">
+            <source srcset="photo19.jpg" type="image/jpeg">
+            <img class="full-image" src="photo19.jpg" alt="Photo 19">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/5</div>
