--- a/photo3.html
+++ b/photo3.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 3</h1>
-        <img class="full-image" src="photo3.jpg" alt="Photo 3">
+        <picture>
+            <source srcset="photo3.webp" type="image/webp">
+            <source srcset="photo3.jpg" type="image/jpeg">
+            <img class="full-image" src="photo3.jpg" alt="Photo 3">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/5.6</div>
