--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             gap: 1rem;
             padding: 2rem;
         }
+        .gallery picture {
+            display: block;
+            width: 100%;
+            height: auto;
+            overflow: hidden;
+        }
         .gallery img {
             width: 100%;
             height: auto;
@@ -37,16 +43,6 @@
             transition: transform 0.3s, box-shadow 0.3s, opacity 0.3s;
             pointer-events: none;
             user-select: none;
-        }
-        .gallery a {
-            overflow: hidden;
-        }
-        .gallery a img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0;
-            animation: fadeIn 0.5s forwards;
         }
         .gallery a:hover img {
             transform: scale(1.05);
@@ -114,26 +110,146 @@
         <h1>Akitoshi's Album</h1>
     </header>
     <div class="gallery">
-        <a href="photo1.html" class="slide-link"><img src="photo1.jpg" alt="Photo 1"></a>
-        <a href="photo2.html" class="slide-link"><img src="photo2.jpg" alt="Photo 2"></a>
-        <a href="photo3.html" class="slide-link"><img src="photo3.jpg" alt="Photo 3"></a>
-        <a href="photo4.html" class="slide-link"><img src="photo4.jpg" alt="Photo 4"></a>
-        <a href="photo5.html" class="slide-link"><img src="photo5.jpg" alt="Photo 5"></a>
-        <a href="photo6.html" class="slide-link"><img src="photo6.jpg" alt="Photo 6"></a>
-        <a href="photo7.html" class="slide-link"><img src="photo7.jpg" alt="Photo 7"></a>
-        <a href="photo8.html" class="slide-link"><img src="photo8.jpg" alt="Photo 8"></a>
-        <a href="photo9.html" class="slide-link"><img src="photo9.jpg" alt="Photo 9"></a>
-        <a href="photo10.html" class="slide-link"><img src="photo10.jpg" alt="Photo 10"></a>
-        <a href="photo11.html" class="slide-link"><img src="photo11.jpg" alt="Photo 11"></a>
-        <a href="photo12.html" class="slide-link"><img src="photo12.jpg" alt="Photo 12"></a>
-        <a href="photo13.html" class="slide-link"><img src="photo13.jpg" alt="Photo 13"></a>
-        <a href="photo14.html" class="slide-link"><img src="photo14.jpg" alt="Photo 14"></a>
-        <a href="photo15.html" class="slide-link"><img src="photo15.jpg" alt="Photo 15"></a>
-        <a href="photo16.html" class="slide-link"><img src="photo16.jpg" alt="Photo 16"></a>
-        <a href="photo17.html" class="slide-link"><img src="photo17.jpg" alt="Photo 17"></a>
-        <a href="photo18.html" class="slide-link"><img src="photo18.jpg" alt="Photo 18"></a>
-        <a href="photo19.html" class="slide-link"><img src="photo19.jpg" alt="Photo 19"></a>
-        <a href="photo20.html" class="slide-link"><img src="photo20.jpg" alt="Photo 20"></a>
+        <a href="photo1.html" class="slide-link">
+            <picture>
+                <source srcset="photo1.webp" type="image/webp">
+                <source srcset="photo1.jpg" type="image/jpeg">
+                <img src="photo1.jpg" alt="Photo 1" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo2.html" class="slide-link">
+            <picture>
+                <source srcset="photo2.webp" type="image/webp">
+                <source srcset="photo2.jpg" type="image/jpeg">
+                <img src="photo2.jpg" alt="Photo 2" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo3.html" class="slide-link">
+            <picture>
+                <source srcset="photo3.webp" type="image/webp">
+                <source srcset="photo3.jpg" type="image/jpeg">
+                <img src="photo3.jpg" alt="Photo 3" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo4.html" class="slide-link">
+            <picture>
+                <source srcset="photo4.webp" type="image/webp">
+                <source srcset="photo4.jpg" type="image/jpeg">
+                <img src="photo4.jpg" alt="Photo 4" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo5.html" class="slide-link">
+            <picture>
+                <source srcset="photo5.webp" type="image/webp">
+                <source srcset="photo5.jpg" type="image/jpeg">
+                <img src="photo5.jpg" alt="Photo 5" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo6.html" class="slide-link">
+            <picture>
+                <source srcset="photo6.webp" type="image/webp">
+                <source srcset="photo6.jpg" type="image/jpeg">
+                <img src="photo6.jpg" alt="Photo 6" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo7.html" class="slide-link">
+            <picture>
+                <source srcset="photo7.webp" type="image/webp">
+                <source srcset="photo7.jpg" type="image/jpeg">
+                <img src="photo7.jpg" alt="Photo 7" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo8.html" class="slide-link">
+            <picture>
+                <source srcset="photo8.webp" type="image/webp">
+                <source srcset="photo8.jpg" type="image/jpeg">
+                <img src="photo8.jpg" alt="Photo 8" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo9.html" class="slide-link">
+            <picture>
+                <source srcset="photo9.webp" type="image/webp">
+                <source srcset="photo9.jpg" type="image/jpeg">
+                <img src="photo9.jpg" alt="Photo 9" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo10.html" class="slide-link">
+            <picture>
+                <source srcset="photo10.webp" type="image/webp">
+                <source srcset="photo10.jpg" type="image/jpeg">
+                <img src="photo10.jpg" alt="Photo 10" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo11.html" class="slide-link">
+            <picture>
+                <source srcset="photo11.webp" type="image/webp">
+                <source srcset="photo11.jpg" type="image/jpeg">
+                <img src="photo11.jpg" alt="Photo 11" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo12.html" class="slide-link">
+            <picture>
+                <source srcset="photo12.webp" type="image/webp">
+                <source srcset="photo12.jpg" type="image/jpeg">
+                <img src="photo12.jpg" alt="Photo 12" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo13.html" class="slide-link">
+            <picture>
+                <source srcset="photo13.webp" type="image/webp">
+                <source srcset="photo13.jpg" type="image/jpeg">
+                <img src="photo13.jpg" alt="Photo 13" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo14.html" class="slide-link">
+            <picture>
+                <source srcset="photo14.webp" type="image/webp">
+                <source srcset="photo14.jpg" type="image/jpeg">
+                <img src="photo14.jpg" alt="Photo 14" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo15.html" class="slide-link">
+            <picture>
+                <source srcset="photo15.webp" type="image/webp">
+                <source srcset="photo15.jpg" type="image/jpeg">
+                <img src="photo15.jpg" alt="Photo 15" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo16.html" class="slide-link">
+            <picture>
+                <source srcset="photo16.webp" type="image/webp">
+                <source srcset="photo16.jpg" type="image/jpeg">
+                <img src="photo16.jpg" alt="Photo 16" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo17.html" class="slide-link">
+            <picture>
+                <source srcset="photo17.webp" type="image/webp">
+                <source srcset="photo17.jpg" type="image/jpeg">
+                <img src="photo17.jpg" alt="Photo 17" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo18.html" class="slide-link">
+            <picture>
+                <source srcset="photo18.webp" type="image/webp">
+                <source srcset="photo18.jpg" type="image/jpeg">
+                <img src="photo18.jpg" alt="Photo 18" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo19.html" class="slide-link">
+            <picture>
+                <source srcset="photo19.webp" type="image/webp">
+                <source srcset="photo19.jpg" type="image/jpeg">
+                <img src="photo19.jpg" alt="Photo 19" loading="lazy">
+            </picture>
+        </a>
+        <a href="photo20.html" class="slide-link">
+            <picture>
+                <source srcset="photo20.webp" type="image/webp">
+                <source srcset="photo20.jpg" type="image/jpeg">
+                <img src="photo20.jpg" alt="Photo 20" loading="lazy">
+            </picture>
+        </a>
     </div>
     <footer>
         <div class="footer-content">
