--- a/photo13.html
+++ b/photo13.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 13</h1>
-        <img class="full-image" src="photo13.jpg" alt="Photo 13">
+        <picture>
+            <source srcset="photo13.webp" type="image/webp">
+            <source srcset="photo13.jpg" type="image/jpeg">
+            <img class="full-image" src="photo13.jpg" alt="Photo 13">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/6.4</div>
