--- a/photo18.html
+++ b/photo18.html
@@ -81,7 +81,12 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 18</h1>
-        <img class="full-image" src="photo18.jpg" alt="Photo 18">
+        <picture>
+            <source srcset="photo18.webp" type="image/webp">
+            <source srcset="photo18.jpg" type="image/jpeg">
+            <img class="full-image" src="photo18.jpg" alt="Photo 18">
+        </picture>
+        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/5.6</div>
