--- a/photo4.html
+++ b/photo4.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 4</h1>
-        <img class="full-image" src="photo4.jpg" alt="Photo 4">
+        <picture>
+            <source srcset="photo4.webp" type="image/webp">
+            <source srcset="photo4.jpg" type="image/jpeg">
+            <img class="full-image" src="photo4.jpg" alt="Photo 4">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/4</div>
