--- a/photo7.html
+++ b/photo7.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 7</h1>
-        <img class="full-image" src="photo7.jpg" alt="Photo 7">
+        <picture>
+            <source srcset="photo7.webp" type="image/webp">
+            <source srcset="photo7.jpg" type="image/jpeg">
+            <img class="full-image" src="photo7.jpg" alt="Photo 7">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/5.6</div>
