--- a/photo8.html
+++ b/photo8.html
@@ -81,7 +81,11 @@
     <div class="container">
         <a href="index.html" class="slide-link">Back to Album</a>
         <h1>Photo 8</h1>
-        <img class="full-image" src="photo8.jpg" alt="Photo 8">
+        <picture>
+            <source srcset="photo8.webp" type="image/webp">
+            <source srcset="photo8.jpg" type="image/jpeg">
+            <img class="full-image" src="photo8.jpg" alt="Photo 8">
+        </picture>        
         <div class="camera-info">
             <div>Camera: FUJIFILM XS-10</div>
             <div>Aperture: f/6.7</div>
